@@ -4,12 +4,11 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
-import jakarta.inject.Inject;
-
 import io.bdeploy.interfaces.configuration.SettingsConfiguration;
 import io.bdeploy.interfaces.remote.MasterSettingsResource;
 import io.bdeploy.interfaces.settings.CustomAttributeDescriptor;
 import io.bdeploy.ui.api.Minion;
+import jakarta.inject.Inject;
 
 public class MasterSettingsResourceImpl implements MasterSettingsResource {
 
@@ -42,8 +41,7 @@ public class MasterSettingsResourceImpl implements MasterSettingsResource {
             }
         }
         if (changed) {
-            settings.instanceGroup.attributes = pMap.values().stream().sorted((a, b) -> a.name.compareTo(b.name))
-                    .collect(Collectors.toList());
+            settings.instanceGroup.attributes = pMap.values().stream().sorted((a, b) -> a.name.compareTo(b.name)).toList();
             root.setSettings(settings);
         }
     }
