@@ -9,7 +9,6 @@ import java.io.IOException;
 import java.nio.file.Path;
 import java.util.List;
 import java.util.SortedMap;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -68,8 +67,7 @@ class EndpointsTest {
         master.getNamedMaster("demo").start(uuid, List.of("app"));
 
         SortedMap<String, EndpointsConfiguration> allEndpoints = common.getInstanceResource("demo").getAllEndpoints(uuid);
-        List<HttpEndpoint> httpEndpoints = allEndpoints.entrySet().stream().flatMap(e -> e.getValue().http.stream())
-                .collect(Collectors.toList());
+        List<HttpEndpoint> httpEndpoints = allEndpoints.entrySet().stream().flatMap(e -> e.getValue().http.stream()).toList();
         assertEquals(1, httpEndpoints.size());
         assertEquals("test", httpEndpoints.get(0).id);
 
